<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/shop_icon"
        android:title="@string/shop" />
    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/explore_icon"
        android:title="@string/explore" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart_icon"
        android:title="@string/cart" />
    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/favourite_icon"
        android:title="@string/favourite" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account_icon"
        android:title="@string/account" />
</menu>